--- a/src/index.css
+++ b/src/index.css
@@ -90,7 +90,9 @@
   align-items: center;
   font-size: 80px;
   flex-direction: column;
-  min-height: 120vh;
+  min-height: 130vh;
+  position: relative;
+  top: 2rem;
 }
 
 .navigation-auto div:not(:last-child) {
