--- a/src/index.css
+++ b/src/index.css
@@ -502,6 +502,11 @@
 }
 
 @media (max-width: 320px) {
+  .App {
+    position: relative;
+    bottom: 3rem;
+  }
+
   .slider {
     max-width: 320px;
     height: 500px;
@@ -997,6 +1002,11 @@
 
 @media (min-width: 321px) {
 
+   .App {
+    position: relative;
+    bottom: 3rem;
+  }
+
   .First-Background{
     display: flex;
     flex-direction: column;
@@ -1005,11 +1015,10 @@
   }
 
   .slider {
-    max-width: 320px;
+    width: 320px;
     height: 500px;
     border-radius: 10px;
     overflow: hidden;
-    background-color: red;
   }
 
   .slides img {
@@ -1497,7 +1506,7 @@
   }
 }
 
-@media (min-width: 390px) and (orientation: landscape) {
+/* @media (min-width: 390px) and (orientation: landscape) {
 
   .slide {
     position: relative;
@@ -1539,49 +1548,50 @@
     top: 34rem;
   }
 
-}
+} */
 
 @media (min-width: 390px) {
-  .First-Background {
+
+   .App {
+    position: relative;
+    bottom: 3rem;
+  }
+
+    .First-Background{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
 
   .slider {
-    max-width: 320px;
+    width: 390px;
     height: 500px;
     border-radius: 10px;
     overflow: hidden;
   }
 
   .slides img {
-    max-width: 320px;
-    height: 430px;
+    width: 390px;
+    height: 500px;
+  }
+
+   .title {
+    font-size: 44px;
+    width: 22rem;
     position: relative;
-    top: 2rem;
-  }
-
-  .navigation-manual {
-    position: absolute;
-    max-width: 320px;
-    margin-top: -80px;
-    display: flex;
-    justify-content: center;
-  }
-
-  .navigation-auto {
-    position: absolute;
-    max-width: 320px;
-    margin-top: -80px;
-    display: flex;
-    justify-content: center;
-  }
+    left: 1rem;
+    bottom: 2rem;
+    z-index: 100;
+   }
 
   .Second-Background {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    bottom: 13rem;
+    min-height: 95vh;
   }
 
   .My-wedding {
@@ -1917,10 +1927,6 @@
     flex-direction: column;
     position: relative;
     right: 2rem;
-  }
-
-  .confirmation input {
-    background-color: red;
   }
 
   .options {
@@ -2425,9 +2431,6 @@
     right: 0rem;
   }
 
-  .confirmation input {
-    background-color: red;
-  }
 
   .options {
     display: flex;
